# Thresh

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: frost.rs  iroh.rs  mod.rs
src-tauri/src/network/: iroh.rs  mod.rs
src-tauri/src/utils/: cip30.rs  frost.rs  mod.rs
src/cip30/: InjectScript-old.ts  InjectScript.ts  TestWalletApi.ts  WalletApi.ts  cardano.ts  test.ts  utils.ts
src/cml/: cardano_message_signing.generated.d.ts  cardano_multiplatform_lib.generated.d.ts  init.ts  loader.ts
src/components/: OpenWebView.tsx
src/types/: cardano.ts
